--- a/fav.html
+++ b/fav.html
@@ -2,3 +2,5 @@
   <h1> Cillian Murphy </h1>
 </center>
 <hr>
+<p> Cillian Murphy's characters have survived zombie apocalypses, Nazi occupation, and British oppression; they've been everywhere from the beaches of Dunkirk to the surface of the sun. Now that he's earned his first Oscar nomination for his commanding work in the explosive biopic Oppenheimer, even more attention and acclaim is funneled Murphy's way. His characters are often haunted, contemplative, and always fascinating. Here's EW’s list of the 15 best Cillian Murphy movies and TV shows, ranked based on the strength of his performance.
+  </p>
